Fix EZP-21182: Implement the FormView view and add it the ContentEditView !squash Fixes to CSS according to review

--- a/Resources/public/css/theme.css
+++ b/Resources/public/css/theme.css
@@ -119,6 +119,7 @@
 
 .ez-view-contenteditformview .fieldgroup-fields {
     border: 1px solid #CCCCCC;
+    box-shadow: 0 0 2px #CCCCCC;
 }
 
 .ez-view-contenteditformview .fieldgroup-name {
